# toolbelt

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md
components/: Cargo.toml  build.sh
components/mcp/: README.md  wkg-config.toml  wkg.toml
components/mcp/client/: Cargo.toml
components/mcp/client-otel-interceptor/: Cargo.toml
components/mcp/client-otel-interceptor/src/: lib.rs
components/mcp/client/src/: lib.rs
components/mcp/wit/: package.wit
components/mcp/wit/overrides/wasi-otel/: logs.wit  metrics.wit  tracing.wit  world.wit
examples/calculator/: README.md  calculator.wat  config.toml
examples/curl/: call_tool.sh  initialize.sh  list_tools.sh
examples/otel/: README.md  add-two.wat  config.toml  docker-compose.yml
src/: capabilities.rs  components.rs  composer.rs  config.rs  interfaces.rs  lib.rs  loader.rs  main.rs  mapper.rs  origin.rs  registry.rs  resolver.rs  runtime.rs  server.rs  service.rs  wit.rs
src/server/: interfaces.rs
tests/: tool_calling.rs
tests/common/: mod.rs
