[package]
name = "toolbelt"
version = "0.3.1"
edition = "2024"

[dependencies]
anyhow = "1"
axum = "0.8"
clap = { version = "4.5", features = ["derive"] }
composable-runtime = { git = "https://github.com/modulewise/composable-runtime", tag = "v0.3.0", default-features = false }
rmcp = { version = "0.14", features = ["server", "transport-streamable-http-server", "transport-worker"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
wat = "1"
rmcp = { version = "0.14", features = ["client", "server"] }
