[package]
name = "composable-mcp"
version = "0.5.0-alpha.3"
edition = "2024"

[[bin]]
name = "toolbelt"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = "0.8"
clap = { version = "4.6", features = ["derive"] }
composable-otel = { git = "https://github.com/modulewise/composable-runtime", branch = "main" }
composable-runtime = { git = "https://github.com/modulewise/composable-runtime", branch = "main", default-features = false, features = ["messaging"] }
jsonschema = { version = "0.46", default-features = false }
opentelemetry = "0.31"
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "http-proto", "reqwest-client"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
rmcp = { version = "1.2", features = ["server", "transport-streamable-http-server", "transport-worker"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
wat = "1"
rmcp = { version = "1.2", features = ["client", "server"] }
