[package]
name = "mcp-client"
version = "0.2.0"
edition = "2024"
description = "MCP client component implementing the composable:mcp/client interface"
homepage = "https://github.com/modulewise/composable-mcp/tree/main/components/mcp"
license = "Apache-2.0"
repository = "https://github.com/modulewise/composable-mcp"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = { workspace = true }
wit-bindgen = { workspace = true }
